--- a/js-practice.css
+++ b/js-practice.css
@@ -27,7 +27,7 @@ body {
 	border: 1px solid black;
 	margin-left: auto;
 	margin-right: auto;
-	background-color: red;
+	background-color: green;
 	margin: 1px;
 	padding: 0 4px 0 4px;
 	box-sizing: border-box;
