--- a/js-practice.css
+++ b/js-practice.css
@@ -29,7 +29,7 @@ body {
     border: 1px solid black;
     margin-left: auto;
     margin-right: auto;
-    background-color: #554d5c;
+    background-color: blue;
     margin: 1px;
     padding: 0 4px 0 4px;
     box-sizing: border-box;
