--- a/js-practice.css
+++ b/js-practice.css
@@ -10,6 +10,7 @@ body {
     margin: 0px;
     padding: 0px;
     background-color: lightgray;
+    font-family: 'Open Sans';
 }
 
 #buttonContainerDiv {
@@ -17,31 +18,30 @@ body {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 0px;
-    background-color: #4f4f53;
-    padding: 1px;
+    background-color: yellow;
     height: 100%;
     box-sizing: border-box;
 }
 
 .buttonDiv {
-    width: 150px;
+    display: table;
+    width: 90px;
     height: 80px;
-    border: 1px solid black;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: blue;
-    margin: 1px;
-    padding: 0 4px 0 4px;
-    box-sizing: border-box;
+    border-top: 1px solid #635469;
+    background-color: #48485D;
+    padding: 0 4px 0 10px;
+    cursor: pointer;
 }
 
-.buttonDiv p {
-    font-family: 'Open Sans';
+.btnTitleDiv {
+    display: table-cell;
+    vertical-align: middle;
     font-weight: 600;
     font-size: 14px;
     color: white;
     margin: 0px;
     padding: 0px;
+    opacity: .65;
 }
 
 #innerDiv {
@@ -60,8 +60,10 @@ body {
     background-color: green;
 }
 
-.clickedBtn {
-    background-color: yellow;
+.buttonDiv.clickedBtn {
+    background-color: lightgray;
+    color: #342e3b;
+    border-top: 0px;
 }
 
 #newButtonDiv {
@@ -74,8 +76,4 @@ body {
     margin: 1px;
     padding: 0 4px 0 4px;
     box-sizing: border-box;
-}
-
-.btnTitleDiv {
-    width: 100p%;
 }
