--- a/js-practice.css
+++ b/js-practice.css
@@ -25,23 +25,32 @@ body {
 
 .buttonDiv {
     display: table;
-    width: 90px;
+    width: 80px;
     height: 80px;
     border-top: 1px solid #635469;
     background-color: #48485D;
     padding: 0 4px 0 10px;
     cursor: pointer;
+    font-weight: 400;
+    font-size: 13px;
+    color: white;
+    letter-spacing: 0.03em;
 }
 
 .btnTitleDiv {
     display: table-cell;
     vertical-align: middle;
-    font-weight: 600;
-    font-size: 14px;
-    color: white;
     margin: 0px;
     padding: 0px;
     opacity: .65;
+}
+
+.buttonDiv.clicked {
+    background-color: lightgray;
+    color: #342e3b;
+    border-top: 0px;
+    letter-spacing: 0.01em;
+    font-weight: 700;
 }
 
 #innerDiv {
@@ -58,12 +67,6 @@ body {
 
 .mouseOver {
     background-color: green;
-}
-
-.buttonDiv.clickedBtn {
-    background-color: lightgray;
-    color: #342e3b;
-    border-top: 0px;
 }
 
 #newButtonDiv {
