--- a/js-practice.css
+++ b/js-practice.css
@@ -56,9 +56,9 @@ body {
     background-color: #e5e5e5;
     padding: 20px;
     border-radius: 9px;
-    border: 1px solid #B9B9B9;
+    border: 1px solid #D0D0D0;
     box-sizing: border-box;
-    box-shadow: 0px 9px 10px 2px rgba(0,0,0,0.1);
+    box-shadow: 0px 9px 12px 0px rgba(0,0,0,0.075);
     z-index: 10;
     transition: 600ms;
     left: 68px;
@@ -118,16 +118,25 @@ h2 {
     background-color: yellow;
 }
 
+.indicatorButtonContainer {
+    position: absolute;
+    top: 0px;
+    right: 87px;
+    bottom: 0;
+    width: 20px;
+    background-color: pink;
+}
+
 .leftButton {
     display: table;
     width: 68px;
     height: 100%;
-    border-top: 1px solid #635469;
-    background-color: #48485D;
+/*    border-top: 1px solid #635469;*/
+    background-color: #e5e5e5;
     cursor: pointer;
-    font-weight: 400;
+    font-weight: 600;
     font-size: 12px;
-    color: white;
+    color: #737373;
     letter-spacing: 0.02em;
     box-sizing: border-box;
 }
@@ -136,13 +145,27 @@ h2 {
     display: table;
     width: 86px;
     height: 100%;
-    border-top: 1px solid #635469;
-    background-color: #48485D;
+/*    border-top: 1px solid #635469;*/
+    background-color: #e5e5e5;
     padding: 0 4px 0 10px;
     cursor: pointer;
-    font-weight: 400;
+    font-weight: 600;
     font-size: 12px;
-    color: white;
+    color: #737373;
+    letter-spacing: 0.04em;
+    box-sizing: border-box;
+}
+.indicatorButton {
+    display: table;
+    width: 20px;
+    height: 100%;
+/*    border-top: 1px solid #635469;*/
+    background-color: yellow;
+/*    padding: 0 4px 0 10px;*/
+    cursor: pointer;
+    font-weight: 600;
+    font-size: 12px;
+    color: #737373;
     letter-spacing: 0.04em;
     box-sizing: border-box;
 }
@@ -168,22 +191,34 @@ h2 {
     user-select: none;
 }
 
+.indicatorIcon {
+    display: table-cell;
+    vertical-align: middle;
+    opacity: .65;
+    background-color: coral;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+/*    content: 'he';*/
+}
+
 .leftButton.clicked {
-    background-color: F1F1F1;
+    background-color: #F1F1F1;
     color: #342e3b;
     border-top: 0px;
-    letter-spacing: 0.0em;
-    font-weight: 800;
-    width: 77px;
-    padding-right: 13px;
+/*    letter-spacing: 0.0em;*/
+/*    font-weight: 800;*/
+/*    width: 77px;*/
+/*    padding-right: 13px;*/
 }
 
 .rightButton.clicked {
     background-color: #F1F1F1;
-    color: #342e3b;
+    color: #1C1C1D;
     border-top: 0px;
-    letter-spacing: 0.0em;
-    font-weight: 800;
+/*    letter-spacing: 0.0em;*/
+/*    font-weight: 800;*/
 }
 
 .hidden {
