--- a/js-practice.css
+++ b/js-practice.css
@@ -41,6 +41,10 @@ body {
     line-height: 50px;
 }
 
+#topRightButtonContainer {
+    width: 106px;
+}
+
 #mainWindow {
     position: absolute;
     top: 50px;
@@ -62,7 +66,7 @@ body {
     z-index: 10;
     transition: 600ms;
     left: 68px;
-    right: 86px;
+    right: 106px;
 }
 
 #viewPane.openLeft {
@@ -121,7 +125,7 @@ h2 {
 .indicatorButtonContainer {
     position: absolute;
     top: 0px;
-    right: 87px;
+    right: 86px;
     bottom: 0;
     width: 20px;
     background-color: pink;
@@ -160,7 +164,7 @@ h2 {
     width: 20px;
     height: 100%;
 /*    border-top: 1px solid #635469;*/
-    background-color: yellow;
+    background-color: #E5E5E5;
 /*    padding: 0 4px 0 10px;*/
     cursor: pointer;
     font-weight: 600;
@@ -195,12 +199,14 @@ h2 {
     display: table-cell;
     vertical-align: middle;
     opacity: .65;
-    background-color: coral;
+    text-align: right;
+    font-size: 27px;
+    font-weight: 200;
+    padding-bottom: 5px;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-/*    content: 'he';*/
 }
 
 .leftButton.clicked {
